src/tests/text_document/snapshots/texlab__tests__text_document__formatting__bibtex_internal_parens.snap
---
source: src/tests/text_document/formatting.rs
expression: "format(r#\"\n%BIB main.bib\n%SRC @article(foo,)\"#)?"
---
@article{foo,
}

