src/tests/text_document/snapshots/texlab__tests__text_document__formatting__bibtex_internal_preamble.snap
---
source: src/tests/text_document/formatting.rs
expression: "format(r#\"\n%BIB main.bib\n%SRC @preamble{\n%SRC     \"foo bar baz\" }\"#)?"
---
@preamble{"foo bar baz"}

